--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -3,9 +3,230 @@
 
 html {
     body {
-        button {
-            padding: 15px;
-            background-color: red;
+        min-height: 100vh;
+        background: @bgGradient;
+        display: flex;
+        justify-content: center;
+        width: 100vw;
+        font-family: 'Barlow Semi Condensed',
+            sans-serif;
+
+        button {}
+    }
+
+    .score-area {
+        display: flex;
+        max-width: 705px;
+        width: 100vw;
+        height: 151px;
+        justify-content: space-between;
+        align-items: center;
+        border: solid 3px @headerOutline;
+        border-radius: 1.5em;
+        padding: 25px 38px;
+        margin: 46px auto 0 auto;
+
+        .score-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: white;
+            width: 146px;
+            height: 112px;
+            border-radius: 1em;
+            color: @scoreText;
+            font-weight: 600;
+            text-transform: uppercase;
+            // padding: 10px;
+
+            h2 {
+                letter-spacing: 2px;
+                font-size: 15px;
+            }
+        }
+
+        #score {
+            color: @darkText;
+            font-weight: 700;
+            font-size: 4em;
         }
     }
+
+    .game-area {
+        width: 100%;
+        margin-top: 60px;
+
+
+        &.controls {
+            margin-left: auto;
+            margin-right: auto;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-between;
+            height: 100%;
+            max-width: 500px;
+            max-height: 440px;
+            background-image: url('../images/bg-triangle.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+
+            button {
+                .circle;
+            }
+
+            [data-select="paper"] {
+                background: @paperGradient;
+
+                &:before {
+
+                    background-image: url("../images/icon-paper.svg");
+
+                }
+            }
+
+            [data-select="rock"] {
+                margin: auto;
+                background: @rockGradient;
+
+                &:before {
+                    background-image: url("../images/icon-rock.svg");
+
+                    background-size: auto 65px;
+                }
+            }
+
+            [data-select="scissors"] {
+                background: @scissorsGradient;
+
+                &:before {
+                    background-image: url("../images/icon-scissors.svg");
+                }
+            }
+        }
+
+        &.results {
+            width: 100%;
+
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            justify-content: center;
+            align-items: center;
+
+            &.stage2 {
+                min-width: 1057.5px;
+                grid-template-columns: 1fr 1fr 1fr;
+
+                #playAgain {
+
+                    h2 {
+                        font-size: 3em;
+                        font-weight: 700;
+                        color: #ffffff;
+                    }
+
+                    button {
+                        margin-top: 1em;
+                        width: 240px;
+                        padding: 1em;
+                        letter-spacing: .2em;
+                        background-color: white;
+                        color: @darkText;
+                        border-radius: .5em;
+                    }
+                }
+            }
+
+            >div {
+
+                text-align: center;
+
+                h2 {
+                    text-transform: uppercase;
+                    color: #ffffff;
+                    font-size: 1.4em;
+                    letter-spacing: .1em;
+                }
+
+                .selection {
+                    width: 80%;
+                    padding-top: 80%;
+                    height: auto;
+                    border-radius: 50%;
+                    position: relative;
+                    margin: 65px auto;
+
+                    &:before {
+                        content: '';
+                        position: absolute;
+                        margin: auto;
+                        left: 0;
+                        right: 0;
+                        top: 0;
+                        bottom: 0;
+                        text-align: center;
+                        border-radius: 50%;
+                        background-repeat: no-repeat;
+                        background-size: auto 120px;
+                        background-position: center;
+                        height: 75%;
+                        width: 75%;
+                        background-color: #17223F;
+                    }
+
+                    p {
+                        clip: rect(0 0 0 0);
+                        clip-path: inset(50%);
+                        height: 1px;
+                        overflow: hidden;
+                        position: absolute;
+                        white-space: nowrap;
+                        width: 1px;
+                    }
+
+                    &.rock,
+                    &.paper,
+                    &.scissors {
+                        box-shadow: 0px -10px 0 rgba(0, 0, 0, 0.35) inset;
+
+                        &:before {
+                            box-shadow: 0px 10px 0 rgba(0, 0, 0, 0.1) inset;
+                            background-color: #ffffff;
+
+                        }
+
+                    }
+
+                    &.rock {
+                        background: @rockGradient;
+
+                        &::before {
+                            background-image: url("../images/icon-rock.svg");
+                            background-size: auto 100px;
+                        }
+                    }
+
+                    &.paper {
+                        background: @paperGradient;
+
+                        &::before {
+                            background-image: url("../images/icon-paper.svg");
+                        }
+                    }
+
+                    &.scissors {
+                        background: @scissorsGradient;
+
+                        &::before {
+                            background-image: url("../images/icon-scissors.svg");
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.hide {
+    display: none;
 }
